--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "git-commit-msg-linter": "^5.0.8",
+    "groq-sdk": "^0.17.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.16",
     "prisma": "^5.21.1",
@@ -36,6 +37,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.15.1",
     "stripe": "^17.3.1",
@@ -44,6 +46,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
