--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^2.2.19",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
@@ -32,6 +33,7 @@
     "groq-sdk": "^0.17.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.6",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -40,6 +42,7 @@
     "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.2",
     "stripe": "^17.3.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
